# k8s_node_server

./: Cargo.toml  Dockerfile  README.md  k8s-dashboard-deployment.yaml
src/: db.rs  dummy_data.rs  excel.rs  handlers.rs  main.rs  models.rs
static/: index.html
