[package]
name = "k8s_node_server"
version = "0.1.0"
edition = "2024"

[dependencies]
# 사용자가 요청한 버전을 유지합니다.
kube = "1.1.0"
k8s-openapi = { version = "0.25", features = ["v1_30"] }

# actix와 관련된 라이브러리들의 버전을 통일합니다.
actix = "0.13.5"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
actix-files = "0.6.6"

# 기타 필요한 라이브러리들
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
secrecy = { version = "0.8", features = ["serde"] }
futures = "0.3" # 비동기 작업을 한번에 처리하기 위해 추가