[package]
name = "k8s_node_server"
version = "0.1.0"
edition = "2024"

[dependencies]
# 사용자가 요청한 버전을 유지합니다.
kube = "1.1.0"
k8s-openapi = { version = "0.25", features = ["v1_30"] }

actix = "0.13"
actix-files = "0.6"
actix-web = { version = "4.11.0", features = ["json"] }
actix-web-actors = "4.2"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
futures = "0.3"
#k8s-openapi = { version = "0.20", features = ["v1_28"] }
#kube = { version = "0.88", features = ["config", "client", "derive"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }