[package]
name = "k8s_node_server"
version = "0.1.0"
edition = "2024"

[dependencies]
# 사용자가 요청한 버전을 유지합니다.
kube = "1.1.0"
k8s-openapi = { version = "0.25", features = ["v1_30"] }

actix = "0.13"
actix-web = "4.4"
actix-web-actors = "4.3"
actix-files = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Kubernetes 관련 의존성
#kube = { version = "0.87", features = ["client", "config", "runtime"] }
#k8s-openapi = { version = "0.20", features = ["v1_28"] }

# 기타 유틸리티
uuid = { version = "1.0", features = ["v4"] }